--- a/index.html
+++ b/index.html
@@ -51,69 +51,14 @@
   <li><a href="intro.html">Presentazione del corso</a></li>
   <li><a href="intro.html#/4">Esercitazioni ed esame</a> - <a href="progetti.html">Progetti</a></li>
   <li><a href="intro.html#/8">Libri e software</a> - <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
-  <li><a href="https://elly2023.dia.unipr.it/mod/forum/view.php?id=3099">Annunci</a></li>
+  <li><a href="https://elly2024.didattica.unipr.it/mod/forum/view.php?id=27467">Annunci</a></li>
+  <li><a href="http://fondinfo.github.io">Slide e materiale didattico</a></li>
+  <li><a href="esercizi">Archivio esercizi</a></li>
 </ul>
 
 <hr />
 
-<h2 id="introduzione-alla-programmazione">Introduzione alla programmazione</h2>
-
-<ul>
-  <li><a href="http://fondinfo.github.io/slides/p11-probsolv.html">Problem solving</a> -
-      <a href="http://fondinfo.github.io/slides/p12-basi.html">Basi</a> -
-      <a href="http://fondinfo.github.io/slides/p13-cicli.html">Cicli</a></li>
-  <li><a href="http://fondinfo.github.io/slides/p21-funzioni.html">Funzioni</a></li>
-  <li><a href="http://fondinfo.github.io/slides/p31-oggetti.html">Oggetti</a> -
-      <a href="http://fondinfo.github.io/slides/p32-relazioni.html">Relazioni</a> -
-      <a href="http://fondinfo.github.io/slides/p33-sviluppo.html">Sviluppo</a> -
-      <a href="http://fondinfo.github.io/slides/p34-collaudo.html">Collaudo</a></li>
-  <li><a href="http://fondinfo.github.io/slides/p41-sequenze.html">Sequenze</a> -
-      <a href="http://fondinfo.github.io/slides/p42-matrici.html">Matrici</a></li>
-  <li><a href="http://fondinfo.github.io/slides/p51-ricorsione.html">Ricorsione</a> -
-      <a href="http://fondinfo.github.io/slides/p52-backtrack.html">Backtracking</a> -
-      <a href="http://fondinfo.github.io/slides/p53-minimax.html">Minimax</a></li>
-</ul>
-
-<hr />
-
-<h2 id="introduzione-allinformatica">Introduzione all’informatica</h2>
-
-<ul>
-  <li><a href="http://fondinfo.github.io/slides/t11-logica.html">Logica</a></li>
-  <li><a href="http://fondinfo.github.io/slides/t21-codifica.html">Codifica</a> -
-      <a href="http://fondinfo.github.io/slides/t22-multimedia.html">Multimedia</a></li>
-  <li><a href="http://fondinfo.github.io/slides/t31-calcolatori.html">Calcolatori</a></li>
-  <li><a href="http://fondinfo.github.io/slides/t41-regex.html">Regex</a> -
-      <a href="http://fondinfo.github.io/slides/t42-grammatiche.html">Grammatiche</a> -
-      <a href="http://fondinfo.github.io/slides/t43-automi.html">Automi</a></li>
-  <li><a href="http://fondinfo.github.io/slides/t51-complessita.html">Complessità</a></li>
-</ul>
-
-<hr />
-
-<h2 id="esercizi-di-programmazione">Esercizi di programmazione</h2>
-
-<ul>
-  <li><a href="https://github.com/tomamic/fondinfo">Esercizi risolti ed esempi</a></li>
-  <li><a href="esercizi-2023.html">Esercizi in lab 2023</a></li>
-  <li><a href="esercizi-2022.html">Esercizi in lab 2022</a></li>
-  <li><a href="esercizi-2021.html">Esercizi in lab 2021</a></li>
-  <li><a href="esercizi-2020.html">Esercizi 2020</a>,
-  <a href="esercizi-2019.html">2019</a>,
-  <a href="esercizi-2018.html">2018</a>,
-  <a href="esercizi-2017.html">2017</a>,
-  <a href="esercizi-2016.html">2016</a>,
-  <a href="esercizi-2015.html">2015</a>,
-  <a href="esercizi-2014.html">2014</a>,
-  <a href="esercizi-2013.html">2013</a>,
-  <a href="esercizi-2012.html">2012</a>,
-  <a href="esercizi-2011.html">2011</a>,
-  <a href="https://www.dropbox.com/s/ay7nhfs7d41cd34/esercizi-2010.pdf?dl=1"> 2010</a></li>
-</ul>
-
-<hr />
-
-<h2 id="approfondimenti">Approfondimenti</h2>
+<h2 id="altro">Altro materiale</h2>
 
 <ul>
   <li><a href="cpp0.html">Modern C++ e g2d</a> —
@@ -154,11 +99,11 @@
   <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
   <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
   <li>Python:
-  <a href="p11-probsolv.html">Lez.0</a> —
-  <a href="p12-basi.html">Lez.1</a> —
-  <a href="p21-funzioni.html">Lez.2</a> —
-  <a href="p31-oggetti.html">Lez.3</a> —
-  <a href="p32-relazioni.html">Lez.4</a> —
+  <a href="http://fondinfo.github.io/p11-probsolv.html">Lez.0</a> —
+  <a href="http://fondinfo.github.io/p12-basi.html">Lez.1</a> —
+  <a href="http://fondinfo.github.io/p21-funzioni.html">Lez.2</a> —
+  <a href="http://fondinfo.github.io/p31-oggetti.html">Lez.3</a> —
+  <a href="http://fondinfo.github.io/p32-relazioni.html">Lez.4</a> —
   <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
   <!--li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
   <a href="go2-oggetti.html">Lez.2</a> —
