--- a/index.html
+++ b/index.html
@@ -48,38 +48,15 @@
 <h2 id="insegnamento-per-ingegneria-delle-tecnologie-informatiche">Insegnamento per Ingegneria delle Tecnologie Informatiche</h2>
 
 <ul>
-  <li><a href="intro.html">Presentazione del corso</a></li>
-  <li><a href="intro.html#/4">Esercitazioni ed esame</a> - <a href="progetti.html">Progetti</a></li>
-  <li><a href="intro.html#/8">Libri e software</a> - <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
-  <li><a href="https://elly2024.didattica.unipr.it/mod/forum/view.php?id=27467">Annunci</a></li>
+  <li><a href="intro.html">Presentazione del corso: argomenti, esercitazioni ed esame</a></li>
   <li><a href="http://fondinfo.github.io">Slide e materiale didattico</a></li>
-  <li><a href="esercizi">Archivio esercizi</a></li>
+  <li><a href="esercizi">Archivio esercizi</a> - <a href="progetti.html">Progetti</a></li>
+  <li><a href="https://fondinfo.github.io/play/">▶️ Playground</a>, con esempi</li>
 </ul>
 
 <hr />
 
-<h2 id="altro">Altro materiale</h2>
-
-<ul>
-  <li><a href="cpp0.html">Modern C++ e g2d</a> —
-  <a href="x08-cpp-sequenze.html">Sequenze dati</a> —
-  <a href="x09-cpp-qt.html">Gui con Qt</a></li>
-  <li>C++: <a href="cpp1.html">Basics</a> —
-  <a href="cpp2.html">Classes</a> —
-  <a href="cpp3.html">Templates</a> —
-  <a href="cpp4.html">Internals</a></li>
-  <li><a href="go-linuxday.html">Go e g2d (Linux Day 2019)</a></li>
-  <li><a href="x01-oop.html">Sistemi ad oggetti</a></li>
-  <li><a href="x02-sisop.html">Sistemi operativi</a></li>
-  <li><a href="x03-reti.html">Reti di calcolatori</a> —
-  <a href="https://www.dropbox.com/s/w6u3s56zxp83q96/x9-webapp.pdf?dl=0">Applicazioni web</a> —
-  <a href="https://www.dropbox.com/s/dz0r1d477uwubv2/ratings.zip?dl=1">Esempio ratings</a></li>
-  <li><a href="x04-html.html">HTML e CSS</a></li>
-  <li><a href="x05-database.html">Basi di dati</a></li>
-  <li><a href="x06-tkinter.html">Python: Gui con Tkinter</a> —
-  <a href="x07-android.html">Kivy e Android</a></li>
-  <li><a href="https://github.com/tomamic/fondinfo/wiki/Link-utili">Link utili</a></li>
-</ul>
+<h2 id="altro"><a herf="altro">Altro materiale</a></h2>
 
 <hr />
 
