--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <hr />
 
-<h2 id="altro"><a herf="altro">Altro materiale</a></h2>
+<h2 id="altro"><a herf="altro">Altro materiale e link utili</a></h2>
 
 <hr />
 
