--- a/index.html
+++ b/index.html
@@ -56,10 +56,6 @@
 
 <hr />
 
-<h2 id="altro"><a herf="altro">Altro materiale e link utili</a></h2>
-
-<hr />
-
 <h2 id="stage-estivo">Stage estivo</h2>
 
 <p><strong>Creare un videogioco in Python</strong></p>
@@ -110,6 +106,9 @@
   <li><a href="https://github.com/tomamic/fondinfo/wiki/T03-Linguaggi">Linguaggi formali, dispensa in italiano</a></li>
 </ul>
 
+<hr />
+
+<h2 id="altro"><a href="altro">Altro materiale e link utili</a></h2>
 
   <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
   <li><a href="https://forms.gle/6cedgGQESKkTQLJAA">Questionario sullo stage</a></li-->
