--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <p>Stage formativo per studenti delle scuole superiori, 09-13 giugno 2025</p>
 
 <ul>
-  <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EbqhoU3nxB5Jl_BJZdIHsygBMA8EaScw99MWRk5okltH9Q?e=lvJpUU">Locandina in PDF</a></li>
   <li><a href="stage.html">Presentazione dello stage</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:w:/g/personal/michele_tomaiuolo_unipr_it/EQSX6XPE1_1LiPxHI1lkQXcBqw1BRHQxjsi7axH9RtH95g?e=bUVdgG">Modulo richiesta di iscrizione</a></li>
   <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
