--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
 <ul>
   <li><a href="paradigms.html">Introduction</a></li>
   <li><a href="hs1.html">Haskell: Lists &amp; funs</a> —
-  <a href="hs2.html">More funs</a> —
-  <a href="hs3.html">Types and I/O</a></li>
+      <a href="hs2.html">More funs</a> —
+      <a href="hs3.html">Types and I/O</a></li>
   <li><a href="rust.html">Rust</a></li>
   <li><a href="golang.html">Go</a></li>
   <li><a href="pymeta.html">Python metaprogramming</a></li>
   <li><a href="http://fondinfo.github.io/slides/scipy.html">Python for data analysis</a></li>
   <li><a href="bigdata.html">Frameworks for Big Data</a></li>
+  <li><a href="http://fondinfo.github.io/slides/t41-regex.html">Espressioni regolari</a> -
+      <a href="http://fondinfo.github.io/slides/t42-grammatiche.html">Grammatiche</a></li>
   <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">Videos and more</a></li>
-  <li><a href="https://github.com/tomamic/fondinfo/wiki/T03-Linguaggi">Linguaggi formali, dispensa in italiano</a></li>
 </ul>
 
 <hr />
