--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="inner clearfix">
         <section id="main-content">
 
-<h2 id="insegnamento-per-ingegneria-delle-tecnologie-informatiche">Insegnamento per Ingegneria delle Tecnologie Informatiche</h2>
+<h2 id="fondinfo">Introduzione all'informatica con Python</h2>
 
 <ul>
   <li><a href="intro.html">Presentazione del corso: argomenti, esercitazioni ed esame</a></li>
