--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
   <a href="go2-oggetti.html">Lez.2</a> —
   <a href="go3-composizione.html">Lez.3</a> —
   <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li-->
-<li><a href="images/sprites/invaders.png">invaders.png</a> —
-<a href="images/sprites/frogger.png">frogger.png</a> —
-<a href="images/sprites/frogger-bg.png">frogger-bg.png</a></li>
+<li><a href="https://fondinfo.github.io/sprites/invaders.png">invaders.png</a> —
+<a href="https://fondinfo.github.io/sprites/frogger.png">frogger.png</a> —
+<a href="https://fondinfo.github.io/sprites/frogger-bg.png">frogger-bg.png</a></li>
 
 <hr />
 
