--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
   <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li-->
 <li><a href="https://fondinfo.github.io/sprites/invaders.png">invaders.png</a> —
 <a href="https://fondinfo.github.io/sprites/frogger.png">frogger.png</a> —
-<a href="https://fondinfo.github.io/sprites/frogger-bg.png">frogger-bg.png</a></li>
+<a href="https://fondinfo.github.io/sprites/frogger-bg.png">frogger-bg.png</a> –
+<a href="https://github.com/fondinfo/sprites">altro…</a>
+</li>
 
 <hr />
 
