--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 
 <hr />
 
-<h2 id="altro"><a href="altro">Altro materiale e link utili</a></h2>
+<h2 id="altro"><a href="altro">Altri argomenti</a></h2>
+
+<h2 id="link"><a href="altro">Link esterni utili</a></h2>
 
   <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
   <li><a href="https://forms.gle/6cedgGQESKkTQLJAA">Questionario sullo stage</a></li-->
