--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <h2 id="fondinfo">Introduzione all'informatica con Python</h2>
 
 <ul>
-  <li><a href="intro.html">Presentazione del corso: argomenti, esercitazioni ed esame</a></li>
+  <li><a href="https://fondinfo.github.io/slides/intro.html">Presentazione del corso: argomenti, esercitazioni ed esame</a></li>
   <li><a href="http://fondinfo.github.io">Testo, slide e materiale didattico</a></li>
   <li><a href="esercizi">Archivio esercizi</a> - <a href="progetti.html">Progetti</a></li>
   <li><a href="https://fondinfo.github.io/play/">▶️ Playground</a>, con esempi</li>
@@ -110,9 +110,7 @@
 
 <hr />
 
-<h2 id="altro"><a href="altro">Altri argomenti</a></h2>
-
-<h2 id="link"><a href="altro">Link esterni utili</a></h2>
+<h2 id="altro"><a href="altro">Altri argomenti</a> – <a href="altro">Link esterni utili</a></h2>
 
   <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
   <li><a href="https://forms.gle/6cedgGQESKkTQLJAA">Questionario sullo stage</a></li-->
