--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <ul>
   <li><a href="https://fondinfo.github.io/slides/intro.html">Presentazione del corso: argomenti, esercitazioni ed esame</a></li>
   <li><a href="http://fondinfo.github.io">Testo, slide e materiale didattico</a></li>
-  <li><a href="esercizi">Archivio esercizi</a> - <a href="progetti.html">Progetti</a></li>
+  <li><a href="esercizi">Archivio esercizi</a> — <a href="progetti.html">Progetti</a></li>
   <li><a href="https://fondinfo.github.io/play/">▶️ Playground</a>, con esempi</li>
 </ul>
 
@@ -63,7 +63,7 @@
 <p>Stage formativo per studenti delle scuole superiori, 09-13 giugno 2025</p>
 
 <ul>
-  <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EbqhoU3nxB5Jl_BJZdIHsygBMA8EaScw99MWRk5okltH9Q?e=lvJpUU">Locandina in PDF</a> –
+  <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EbqhoU3nxB5Jl_BJZdIHsygBMA8EaScw99MWRk5okltH9Q?e=lvJpUU">Locandina in PDF</a> —
   <a href="https://fondinfo.github.io/slidesstage.html">Presentazione</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:w:/g/personal/michele_tomaiuolo_unipr_it/EQSX6XPE1_1LiPxHI1lkQXcBqw1BRHQxjsi7axH9RtH95g?e=bUVdgG">Modulo richiesta di iscrizione</a></li>
   <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
@@ -104,14 +104,14 @@
   <li><a href="http://fondinfo.github.io/slides/pymeta.html">Python metaprogramming</a></li>
   <li><a href="http://fondinfo.github.io/slides/scipy.html">Python for data analysis</a></li>
   <li><a href="http://fondinfo.github.io/slides/bigdata.html">Frameworks for Big Data</a></li>
-  <li><a href="http://fondinfo.github.io/slides/t41-regex.html">Espressioni regolari</a> -
+  <li><a href="http://fondinfo.github.io/slides/t41-regex.html">Espressioni regolari</a> —
       <a href="http://fondinfo.github.io/slides/t42-grammatiche.html">Grammatiche</a></li>
   <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">Videos and more</a></li>
 </ul>
 
 <hr />
 
-<h2 id="altro"><a href="altro">Altri argomenti</a> – <a href="link">Link esterni utili</a></h2>
+<h2 id="altro"><a href="altro">Altri argomenti</a> —— <a href="link">Link esterni utili</a></h2>
 
   <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
   <li><a href="https://forms.gle/6cedgGQESKkTQLJAA">Questionario sullo stage</a></li-->
