--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
   <li><a href="http://fondinfo.github.io/slides/pymeta.html">Python metaprogramming</a></li>
   <li><a href="http://fondinfo.github.io/slides/scipy.html">Python for data analysis</a></li>
   <li><a href="http://fondinfo.github.io/slides/bigdata.html">Frameworks for Big Data</a></li>
-  <li><a href="http://fondinfo.github.io/slides/t41-regex.html">Espressioni regolari</a> —
-      <a href="http://fondinfo.github.io/slides/t42-grammatiche.html">Grammatiche</a></li>
+  <li><a href="http://fondinfo.github.io/slides/en-t41-regex.html">Regular expressions</a> —
+      <a href="http://fondinfo.github.io/slides/en-t42-grammars.html">Grammars</a></li>
   <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">Videos and more</a></li>
 </ul>
 
